traces/bug_687.txt
examples++-load/iovtk.cpp:1237: error: DEAD_STORE
  The value written to &ttff (type Fem2D::TTriangle<Fem2D::R2>*) is never used.
Showing all 1 steps of the trace


examples++-load/iovtk.cpp:1237:3: Write of unused value
1235.       	  iv[j-firstCell[i]] = IntCells[j];
1236.   	}
1237.   	(ttff++)->set(vff, iv[0], iv[1], iv[2], label);
          ^
1238.   	break;   
1239.         default: 
